@@ -10,7 +10,8 @@ void inc_proc_northd_init(struct ovsdb_idl_loop *nb,
                           struct ovsdb_idl_loop *sb);
 bool inc_proc_northd_run(struct ovsdb_idl_txn *ovnnb_txn,
                          struct ovsdb_idl_txn *ovnsb_txn,
-                         bool recompute);
+                         bool recompute, uint32_t backoff_ms);
 void inc_proc_northd_cleanup(void);
+bool inc_proc_northd_can_run(bool recompute);
 
 #endif /* INC_PROC_NORTHD */
